# cpp-chat-system

./: .env.example  .gitignore  CMakeLists.txt  README.md  docker-compose.yml
client/: CMakeLists.txt
database/: init.sql
docs/: CMakeLists.txt  init.sql
services/api-server/: CMakeLists.txt  Database.cpp  Database.h  HTTPRouter.hpp  MessageHandlers.hpp  PasswordHelper.hpp  RabbitMQClient.hpp  RoomHandlers.hpp  TranslationHandlers.hpp  UserHandlers.hpp  Validator.hpp  db.cpp  db.h  main.cpp  translation_client.h  validation.h
services/api-server/src/clients/: RabbitMQClient.hpp  TranslationClient.hpp
services/api-server/src/database/: Database.cpp  Database.h
services/api-server/src/handlers/: MessageHandlers.hpp  RoomHandlers.hpp  TranslationHandlers.hpp  UserHandlers.hpp
services/api-server/src/routing/: HTTPRouter.hpp
services/api-server/src/utils/: PasswordHelper.hpp
services/chat-server/: CMakeLists.txt
services/notification-service/: CMakeLists.txt  RabbitMQConsumer.hpp  SMTPClient.hpp  main.cpp
services/notification-service/src/clients/: SMTPClient.hpp
services/notification-service/src/consumers/: RabbitMQConsumer.hpp
